wip: pride 2026 webhooks and stuff
