# apps/docs/public/openapi.yaml
@@ -1269,18 +1269,20 @@ components:
             badges:
               type: integer
               format: bitfield
-              example: 63
+              example: 511
               description: |
                 Any badges applicable to this user. These are currently unused and undisplayed, and as such are subject to change
 
-                In order from first to seventh bit, the current bits are:
-                - (unused)
+                In order from first to ninth bit, the current bits are:
+                - MIDAS
                 - EARLY_MODPACK_ADOPTER
                 - EARLY_RESPACK_ADOPTER
                 - EARLY_PLUGIN_ADOPTER
                 - ALPHA_TESTER
                 - CONTRIBUTOR
                 - TRANSLATOR
+                - AFFILIATE
+                - PRIDE_2026
             auth_providers:
               type: array
               items:
